--- a/.github/workflows/build-addon.yml
+++ b/.github/workflows/build-addon.yml
@@ -48,6 +48,7 @@ jobs:
     - name: Commit updated files
       if: github.ref_type == 'tag'
       run: |
+        git switch ${{ github.event.repository.default_branch }}
         git add README.md addon.xml
         if git diff --staged --quiet; then
           echo "No changes to commit."
