--- a/.github/workflows/build-addon.yml
+++ b/.github/workflows/build-addon.yml
@@ -89,32 +89,47 @@ jobs:
       run: |
         git clone --depth 1 --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
         cd gh-pages
+        
         cp ../${{ steps.addon_zip.outputs.zip_name }} .
 
-        cat > addons.xml <<- EOF
-          <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-          <addons>
-          $(cat ../addon.xml)
-
-            <addon id="repository.docchipl"
-                   name="Docchipl Repo"
-                   version="${{ env.VERSION }}"
-                   provider-name="skoruppa">
-              <extension point="xbmc.addon.repository" name="Docchipl Repo">
+        REPO_ID="repository.docchipl"
+        REPO_ZIP_NAME="${REPO_ID}-${{ env.VERSION }}.zip"
+        mkdir -p $REPO_ID
+        
+        cat > ./${REPO_ID}/addon.xml <<- EOF
+        <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+        <addon id="repository.docchipl" name="Docchipl Repo" version="${{ env.VERSION }}" provider-name="skoruppa">
+            <extension point="xbmc.addon.repository" name="Docchipl Repo">
                 <info compressed="false">https://raw.githubusercontent.com/${{ github.repository }}/gh-pages/addons.xml</info>
                 <checksum>https://raw.githubusercontent.com/${{ github.repository }}/gh-pages/addons.xml.md5</checksum>
                 <datadir zip="true">https://raw.githubusercontent.com/${{ github.repository }}/gh-pages/</datadir>
-              </extension>
-              <extension point="xbmc.addon.metadata">
+            </extension>
+            <extension point="xbmc.addon.metadata">
                 <summary>Repozytorium dla wtyczki Docchipl</summary>
                 <description>Repozytorium instalacyjne dla dodatków od skoruppa.</description>
                 <platform>all</platform>
                 <assets>
-                  <icon>icon.png</icon>
-                  <fanart>fanart.jpg</fanart>
+                    <icon>icon.png</icon>
+                    <fanart>fanart.jpg</fanart>
                 </assets>
-              </extension>
-            </addon>
+            </extension>
+        </addon>
+        EOF
+        
+        cp ../resources/icon.png ./${REPO_ID}/icon.png || echo "Repo icon not found in resources/."
+        cp ../resources/fanart.jpg ./${REPO_ID}/fanart.jpg || echo "Repo fanart not found in resources/."
+        
+        zip -r $REPO_ZIP_NAME $REPO_ID
+        rm -rf $REPO_ID
+
+        REPO_ADDON_XML=$(unzip -p $REPO_ZIP_NAME */addon.xml)
+
+        cat > addons.xml <<- EOF
+          <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+          <addons>
+          $(sed '/<?xml/d' ../addon.xml)
+
+          ${REPO_ADDON_XML}
           </addons>
         EOF
 
@@ -123,9 +138,7 @@ jobs:
         cat > index.html <<- EOH
         <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
         <html>
-        <head>
-         <title>Index of /</title>
-        </head>
+        <head><title>Index of /</title></head>
         <body>
         <h1>Index of /</h1>
         <table>
