--- a/.github/workflows/build-addon.yml
+++ b/.github/workflows/build-addon.yml
@@ -90,8 +90,8 @@ jobs:
 
     - name: Update gh-pages repository
       run: |
-        git clone --depth 1 --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
-        cd gh-pages
+        git clone --depth 1 --branch gh-pages https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages-temp
+        cd gh-pages-temp
         
         # POPRAWKA: Czyszczenie starych ZIP-ów wtyczki i repozytorium
         rm -f plugin.video.docchipl-*.zip
